<resources>
    <string name="app_name">JobScheluder</string>
    <string name="network_type_text">Network Type Required</string>
    <string name="network_type_none">None</string>
    <string name="network_type_any">Any</string>
    <string name="network_type_wifi">Wifi</string>
    <string name="requires_text">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:  </string>
    <string name="override_deadline_no_set">No Set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
</resources>
