<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_type_text" />

    <RadioGroup
        android:id="@+id/network_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/network_type_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/network_type_none" />

        <RadioButton
            android:id="@+id/network_type_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_type_any" />


        <RadioButton
            android:id="@+id/network_type_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_type_wifi" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requires_text" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle" />

        <Switch
            android:id="@+id/idle_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging" />

        <Switch
            android:id="@+id/chargin_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline" />


        <TextView
            android:id="@+id/override_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline_no_set" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

    <Button
        android:id="@+id/button_schedule_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="scheduleJob"
        android:text="@string/schedule_job" />


    <Button
        android:id="@+id/button_cancel_jobs"
        android:layout_width="wrap_content"
        android:onClick="cancelJobs"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel_jobs" />


</LinearLayout>